--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,7 @@
 spring.application.name=pdv-chaveiro
 
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/pdv
-spring.datasource.username=user
-spring.datasource.password=pass
+# Define o perfil ativo da aplicação
+spring.profiles.active=mock
 
-# JPA & Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Server
+# Porta do servidor
 server.port=8080
