--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 # Local Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/meu-data-base
-spring.datasource.username=user
-spring.datasource.password=pass
+spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 
 # JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
