--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pdv-chaveiro
 
 # Define o perfil ativo da aplicação
-spring.profiles.active=mock
+spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 # Porta do servidor
 server.port=8080
